--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <header>
         <div class="container">
             <h1>Meeti Women Clinic</h1>
-            <nav>
-                <ul>
+             <nav>
+                <div class="menu-toggle" id="menu-toggle">
+                    ☰
+                </div>
+                <ul id="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about-doctor">About Doctor</a></li>
                     <li><a href="#services">Services</a></li>
@@ -168,4 +171,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
