--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <!-- Header with Navigation -->
     <header>
         <div class="container">
-            <h1>Meeti Women Clinic</h1>
+            
+           <div class="header-top">
+                <h1>Meeti Women's Clinic</h1>
+                <div class="menu-toggle" id="menu-toggle">☰</div>
+            </div>
+            
              <nav>
-                <div class="menu-toggle" id="menu-toggle">
-                    ☰
-                </div>
                 <ul id="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about-doctor">About Doctor</a></li>
@@ -173,3 +175,4 @@
 </body>
 
 </html>
+
