--- a/index.html
+++ b/index.html
@@ -166,6 +166,15 @@
                     <p>Phone: +91-9876543210</p>
                     <p>Email: info@meetiwomenclinic.com</p>
                 </div>
+
+                <div class="footer-section">
+                    <h3>Follow Us</h3>
+
+                    <a href="https://www.instagram.com/meetiwomenclinic/" target="_blank" rel="noopener noreferrer"
+                        class="social-link">
+                        Instagram
+                    </a>
+                </div>
             </div>
             <p>&copy; 2023 Meeti Women Clinic. All rights reserved.</p>
         </div>
@@ -175,4 +184,5 @@
 </body>
 
 </html>
+
 
