--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="placeholder-image"></div>
                     </div>
                     <div class="doctor-details">
-                        <h3>Dr. Meeti Sharma</h3>
+                        <h3>Dr. Meeti Jadhav</h3>
                         <p><strong>Qualifications:</strong> MBBS, MD in Obstetrics and Gynecology, Fellowship in Reproductive Medicine.</p>
                         <p><strong>Years of Experience:</strong> 15+ years specializing in women’s health.</p>
                         <p><strong>Mission Statement:</strong> To empower women with compassionate, evidence-based care, fostering trust and health for all stages of life.</p>
@@ -184,5 +184,6 @@
 </body>
 
 </html>
+
 
 
