--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <div class="placeholder-image"></div>
                     </div>
                     <div class="doctor-details">
-                        <h3>Dr. Meeti Jadhav</h3>
-                        <p><strong>Qualifications:</strong> MBBS, MD in Obstetrics and Gynecology, Fellowship in Reproductive Medicine.</p>
+                        <h3>DR. MEETI JADHAV</h3>
+                        <p><strong>Qualifications:</strong> MS (OBGY), Consultant Obstetrician & Gynecologist, Infertility Specialist, Fellowship in Reproductive Medicine.</p>
                         <p><strong>Years of Experience:</strong> 15+ years specializing in women’s health.</p>
                         <p><strong>Mission Statement:</strong> To empower women with compassionate, evidence-based care, fostering trust and health for all stages of life.</p>
                     </div>
@@ -103,21 +103,21 @@
                 <div class="clinic-details">
                     <div class="info-item">
                         <h3>Address</h3>
-                        <p>Shewalewadi, Pune, Maharashtra, India</p>
+                        <p>Opulent Park Phase no 2, Shop no 5, Shewalwadi, Solapur Highway, Near Chitale Bandhu, 412307</p>
                     </div>
                     <div class="info-item">
                         <h3>Clinic Timings</h3>
-                        <p>Monday - Saturday: 9:00 AM - 6:00 PM<br>Sunday: Closed</p>
+                        <p>Mon to Sat | Morning 11:30 AM To 2:00 PM | Evening 6:30 PM To 9:00 PM<br>Sunday: 6:00 PM - 9:00 PM</p>
                     </div>
                     <div class="info-item">
                         <h3>Phone</h3>
-                        <p>+91-9876543210</p>
+                        <p>+91-9356502864</p>
                     </div>
                 </div>
                 <div class="map-placeholder">
                     <h3>Location</h3>
                     <!-- Placeholder for Google Maps embed -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.123456789012!2d73.8567!3d18.5204!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2bf2e67461101%3A0x496594031014e0!2sShewalewadi%2C%20Pune%2C%20Maharashtra!5e0!3m2!1sen!2sin!4v1690000000000!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/dir//DR.+MEETI+WOMEN'S+CLINIC,+shop+number+05,+ground+floor,+sr+no.+86,+opulent+central+park,+phase+2,+Solapur+-+Pune+Hwy,+opp.+Manjri+Stud+Farm,+next+to+bharat+petrol+pump,+Manjri+Bk,+Pune,+Maharashtra+412307/@18.5072499,73.994756,15z/data=!4m8!4m7!1m0!1m5!1m1!1s0x3bc2c3406b69d0cb:0x7f948cc07332440a!2m2!1d73.9688485!2d18.4970459?entry=ttu&g_ep=EgoyMDI2MDIwNC4wIKXMDSoASAFQAw%3D%3D" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -158,25 +158,25 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Meeti Women Clinic</h3>
-                    <p>Shewalewadi, Pune, Maharashtra, India</p>
+                    <h3>Meeti Women's Clinic</h3>
+                    <p>Opulent Park Phase no 2, Shop no 5, Shewalwadi, Solapur Highway, Near Chitale Bandhu 412307</p>
                 </div>
                 <div class="footer-section">
                     <h3>Contact</h3>
-                    <p>Phone: +91-9876543210</p>
+                    <p>Phone: +91-9356502864</p>
                     <p>Email: info@meetiwomenclinic.com</p>
                 </div>
 
                 <div class="footer-section">
                     <h3>Follow Us</h3>
 
-                    <a href="https://www.instagram.com/meetiwomenclinic/" target="_blank" rel="noopener noreferrer"
+                    <a href="https://www.instagram.com/dr.meeti_womencare/" target="_blank" rel="noopener noreferrer"
                         class="social-link">
                         Instagram
                     </a>
                 </div>
             </div>
-            <p>&copy; 2023 Meeti Women Clinic. All rights reserved.</p>
+            <p>&copy; 2026 Meeti Women's Clinic. All rights reserved.</p>
         </div>
     </footer>
 
@@ -184,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
