--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="map-placeholder">
                     <h3>Location</h3>
                     <!-- Placeholder for Google Maps embed -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.704361294377!2d73.96627357496227!3d18.497045882591877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3406b69d0cb%3A0x7f948cc07332440a!2sDR.%20MEETI%20WOMEN&#39;S%20CLINIC!5e0!3m2!1sen!2sin!4v1770458385028!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3783.704361294377!2d73.96627357496227!3d18.497045882591877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc2c3406b69d0cb%3A0x7f948cc07332440a!2sDR.%20MEETI%20WOMEN&#39;S%20CLINIC!5e0!3m2!1sen!2sin!4v1770458385028!5m2!1sen!2sin" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </section>
@@ -170,7 +170,7 @@
                 <div class="footer-section">
                     <h3>Follow Us</h3>
 
-                    <a href="https://www.instagram.com/dr.meeti_womencare/" target="_blank" rel="noopener noreferrer"
+                    <a href="https://www.instagram.com/dr.meeti_womencare?igsh=eDczMnZjZ2VjdWh6" target="_blank" rel="noopener noreferrer"
                         class="social-link">
                         Instagram
                     </a>
@@ -184,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
