--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <div class="footer-section">
                     <h3>Follow Us</h3>
 
-                    <a href="https://www.instagram.com/dr.meeti_womencare?igsh=eDczMnZjZ2VjdWh6" target="_blank" rel="noopener noreferrer"
+                    <a href="https://www.instagram.com/dr.meeti_womencare/" target="_blank" rel="noopener noreferrer"
                         class="social-link">
                         Instagram
                     </a>
@@ -184,6 +184,7 @@
 </body>
 
 </html>
+
 
 
 
