--- a/index.html
+++ b/index.html
@@ -170,9 +170,11 @@
                 <div class="footer-section">
                     <h3>Follow Us</h3>
 
-                    <a href="https://www.instagram.com/dr.meeti_womencare/" target="_blank" rel="noopener noreferrer"
-                        class="social-link">
-                        Instagram
+                    <a href="https://www.instagram.com/dr.meeti_womencare/"
+                       target="_blank" 
+                       rel="noopener noreferrer"
+                       class="social-link">
+                       Instagram
                     </a>
                 </div>
             </div>
@@ -184,6 +186,7 @@
 </body>
 
 </html>
+
 
 
 
