--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <h2>About Our Doctor</h2>
                 <div class="doctor-profile">
                     <div class="doctor-image">
-                        <!-- Placeholder: Gray box for doctor image -->
-                        <div class="placeholder-image"></div>
+                        <img src="doctor.jpg" alt="Dr. Meeti Sharma - Gynecologist" class="doctor-photo">
                     </div>
+
                     <div class="doctor-details">
                         <h3>DR. MEETI JADHAV</h3>
                         <p><strong>Qualifications:</strong> MS (OBGY), Consultant Obstetrician & Gynecologist, Infertility Specialist, Fellowship in Reproductive Medicine.</p>
@@ -186,6 +186,7 @@
 </body>
 
 </html>
+
 
 
 
