--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>About Our Doctor</h2>
                 <div class="doctor-profile">
                     <div class="doctor-image">
-                        <img src="doctor.jpg" alt="Dr. Meeti Sharma - Gynecologist" class="doctor-photo">
+                        <img src="doctor.jpg" alt="Dr. Meeti Jadhav - Gynecologist" class="doctor-photo">
                     </div>
 
                     <div class="doctor-details">
@@ -186,6 +186,7 @@
 </body>
 
 </html>
+
 
 
 
