--- a/index.html
+++ b/index.html
@@ -183,9 +183,21 @@
     </footer>
 
     <script src="script.js"></script>
+
+    <!-- WhatsApp Chat Button -->
+    <a 
+      href="https://wa.me/919028505107?text=Hello%20I%20would%20like%20to%20book%20an%20appointment%20at%20Meeti%20Women%20Clinic."
+      class="whatsapp-float"
+      target="_blank"
+      rel="noopener noreferrer"
+    >
+      💬
+    </a>
+
 </body>
 
 </html>
+
 
 
 
