--- a/index.html
+++ b/index.html
@@ -191,12 +191,22 @@
       target="_blank"
       rel="noopener noreferrer"
     >
-      💬
+      <svg 
+  xmlns="http://www.w3.org/2000/svg" 
+  viewBox="0 0 32 32" 
+  width="26" 
+  height="26" 
+  fill="white"
+>
+  <path d="M19.11 17.53c-.27-.14-1.6-.79-1.85-.88-.25-.09-.43-.14-.61.14-.18.27-.7.88-.86 1.06-.16.18-.32.2-.59.07-.27-.14-1.14-.42-2.17-1.34-.8-.71-1.34-1.6-1.5-1.87-.16-.27-.02-.41.12-.55.12-.12.27-.32.41-.48.14-.16.18-.27.27-.45.09-.18.05-.34-.02-.48-.07-.14-.61-1.48-.84-2.03-.22-.53-.45-.46-.61-.47h-.52c-.18 0-.48.07-.73.34-.25.27-.96.94-.96 2.29 0 1.35.98 2.66 1.12 2.84.14.18 1.93 2.95 4.68 4.13.65.28 1.16.45 1.55.58.65.21 1.24.18 1.7.11.52-.08 1.6-.65 1.82-1.28.23-.63.23-1.17.16-1.28-.07-.11-.25-.18-.52-.32zM16.02 3C9.4 3 4 8.4 4 15.02c0 2.64.87 5.08 2.34 7.06L4 29l7.16-2.28c1.92 1.05 4.12 1.64 6.86 1.64 6.62 0 12.02-5.4 12.02-12.02C30.04 8.4 22.64 3 16.02 3z"/>
+</svg>
+
     </a>
 
 </body>
 
 </html>
+
 
 
 
